[package]
name = "doip-sockets"
version = "0.2.4"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
edition = "2021"
description = "A Diagnostics over Internet Protocol (DoIP) implementation for TCP & UDP Sockets with helper functions."
readme = "README.md"
repository = "https://github.com/samp-reston/doip-sockets"
license = "MIT"
keywords = ["doip", "diagnostics", "vehicle", "sockets"]
categories = ["development-tools", "network-programming"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
doip-codec = { git = "https://github.com/theswiftfox/doip-codec.git", rev = "f6bbc3b" }
doip-definitions = { git = "https://github.com/theswiftfox/doip-definitions.git", rev = "6cd6d45" }
futures = "0.3"
tokio = { version = "1.43.0", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
] }
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
tokio-openssl = "0.6.5"
openssl = "0.10.70"
thiserror = "2.0.12"

[dev-dependencies]
