[package]
name = "doip-sockets"
version = "0.2.4"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
edition = "2021"
description = "A Diagnostics over Internet Protocol (DoIP) implementation for TCP & UDP Sockets with helper functions."
readme = "README.md"
repository = "https://github.com/samp-reston/doip-sockets"
license = "MIT"
keywords = ["doip", "diagnostics", "vehicle", "sockets"]
categories = ["development-tools", "network-programming"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
doip-codec = { git = "https://github.com/theswiftfox/doip-codec.git", rev = "0dba319" }
doip-definitions = { git = "https://github.com/theswiftfox/doip-definitions.git", rev = "bdeab8c" }
futures = "0.3.31"
tokio = { version = "1.43.0", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
] }
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
tokio-openssl = { version = "0.6.5", optional = true }
openssl = { version = "0.10.70", optional = true }
thiserror = "2.0.12"

[dev-dependencies]

[features]
default = ["ssl"]
ssl = ["dep:tokio-openssl", "dep:openssl"]
